forms-flow-api/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-flow-api
  namespace : forms-flow-api
  labels:
    app.kubernetes.io/name: formsflowapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: formsflowapi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: formsflowapi
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: formsflowapi
          image: sofiamunicipalitydigitall/forms-flow-api:latest
          ports:
            - containerPort: 5000
              name: http-api
              protocol: TCP
